[tool.poetry]
name = "pruebas"
version = "0.1.0"
description = ""
authors = ["pepitoternera <xosegq16@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
